# Book-sorting

./: .env.example  .gitignore  LICENSE  config.yaml  design.md  done_with_Cursor.md  pyproject.toml  readme.md  requirements.md
src/book_sorting/: __init__.py  __main__.py  book_information.py  config.py  create_book_collection.py
src/book_sorting/ai/: __init__.py  boundary.py  description.py  factory.py  openai_boundary.py  schemas.py
src/book_sorting/classification/: __init__.py  classifier.py  classify.py  constants.py  normalize.py
src/book_sorting/discovery/: __init__.py  media_types.py  scan.py
src/book_sorting/execution/: __init__.py  copy_files.py  execute.py
src/book_sorting/grouping/: __init__.py  group.py  rules.py
src/book_sorting/history/: __init__.py  exclude.py  record.py  store.py
src/book_sorting/io/: __init__.py  long_paths.py
src/book_sorting/metadata/: __init__.py  audio_tags.py  ebook_tags.py  extract.py  extractor.py  nfo.py  path_hints.py
src/book_sorting/models/: __init__.py  domain.py  state.py
src/book_sorting/planning/: __init__.py  builder.py  companions.py  paths.py  plan.py
src/book_sorting/reporting/: __init__.py  persist.py  report.py  summary.py
tests/: conftest.py  test_ai_boundary.py  test_book_information.py  test_classification.py  test_config.py  test_create_book_collection.py  test_discovery.py  test_execution.py  test_grouping.py  test_history.py  test_long_paths.py  test_metadata.py  test_nfo_cache.py  test_planning.py  test_reporting.py  test_research.py  test_review.py  test_workflow_runner.py
(+18 files in other folders)
